--- a/templates/index.html
+++ b/templates/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-  <link rel="stylesheet" href="../src/bootstrap-4.0.0-beta/dist/css/bootstrap.min.css">
+  <link rel="stylesheet" href=bn ->
   <link rel="stylesheet" href="../src/css/estilo.css">
   <script src="../src/js/jquery.min.js"></script>
   <script src="../src/bootstrap-4.0.0-beta/dist/js/bootstrap.min.js"></script>
