texto en el carousel

--- a/templates/index2.html
+++ b/templates/index2.html
@@ -96,12 +96,12 @@
         </div>
       </div>
 
-      <div class="row">
-        <div class="col-lg-8 mx-auto main-text">
-          <h2>Sobre nosotros</h2>
-          <p>Nos dedicamos a brindarle un gran bienestar y una gran cantidad de servicios para que usted pueda disfrutar sus mejores vacaciones en cualquier parte del mundo
-        </div>
+
+      <div class="col-lg-8 mx-auto main-text">
+        <h2 class="h2Modi">Sobre nosotros</h2>
+        <p class="pModi">Nos dedicamos a brindarle un gran bienestar y una gran cantidad de servicios para que usted pueda disfrutar sus mejores vacaciones en cualquier parte del mundo
       </div>
+
     </div>
   </section>
 
