--- a/src/css/estilo.css
+++ b/src/css/estilo.css
@@ -13,9 +13,9 @@
   margin-top: 1%;
   font-family: cursive;
   font-size: 180%;
-
   margin-left: 23%;
 }
+
 .infoDatosUsuario {
   margin-left: 23%;
 }
@@ -38,7 +38,6 @@
   background-size: cover;
 }
 
-
 .container {
   max-width: 70%;
   margin-top: 1%;
@@ -54,13 +53,34 @@
   color: rgb(0, 5, 120);
   font-family: serif;
 }
+
 .main-text {
-    position: absolute;
-    top: 33%;
-    width: 96.6666666666666%;
+  position: absolute;
+  top: 147%;
+  width: 100%;
+  left: 16.5%;
+  background-color: rgba(158,158,158,0.7);
 }
-.credit-card-div  span { padding-top:10px; }
-.credit-card-div img { padding-top:52px;
- width: 120px;}
-.credit-card-div .small-font { font-size:9px; }
-.credit-card-div .pad-adjust { padding-top:10px; }
+
+.pModi{
+font-size: 130%;
+color:black;
+font-weight: bold;
+}
+
+.credit-card-div span {
+  padding-top: 10px;
+}
+
+.credit-card-div img {
+  padding-top: 52px;
+  width: 120px;
+}
+
+.credit-card-div .small-font {
+  font-size: 9px;
+}
+
+.credit-card-div .pad-adjust {
+  padding-top: 10px;
+}
