--- a/src/css/estilo.css
+++ b/src/css/estilo.css
@@ -61,7 +61,9 @@
   left: 16.5%;
   background-color: rgba(158,158,158,0.7);
 }
-
+.rrss{
+  margin-top: 35px;
+}
 .pModi{
 font-size: 130%;
 color:black;
