--- a/src/css/grayscale.css
+++ b/src/css/grayscale.css
@@ -29,7 +29,7 @@ h1, h2, h3, h4, h5, h6 {
 p {
   font-size: 16px;
   line-height: 1.5;
-  margin: 0 0 25px;
+  margin: 0 0 35%;
 }
 
 @media (min-width: 768px) {
@@ -197,7 +197,7 @@ color: rgb(255, 255, 255);
 }
 .download-section {
   color: white;
-  background: url("../img/downloads-bg.jpg") no-repeat center center scroll;
+  background: url("../../templates/templates-files/index/holidayinRestaurante.jpg") no-repeat center center scroll;
   background-color: black;
   -webkit-background-size: cover;
   -moz-background-size: cover;
