--- a/templates/MetodoPago.html
+++ b/templates/MetodoPago.html
@@ -62,7 +62,7 @@
       <div class="form-group">
         <div class="form-row">
           <div class="col">
-            <label for="state_id" class="control-label">metodo pago</label>
+            <label for="state_id" class="control-label">Metodo pago</label>
             <select class="form-control" id="tarjetas">  </select>
           </div>
         </div>
@@ -86,7 +86,7 @@
             <input type="text" class="form-control" placeholder="CCV" />
           </div>
           <div class="col">
-            <img src="/home/juan_cruz/Documentos/Programacion/DiesñoWeb/Proyecto/templates/templates-files/tarjeta1.png" class="img-rounded" />
+            <img src="templates-files/metodopago/tarjeta1.png" class="img-rounded" />
           </div>
         </div>
       </div>
