--- a/templates/index2.html
+++ b/templates/index2.html
@@ -42,7 +42,7 @@
             <a class="nav-link js-scroll-trigger" href="#download">Check-In</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#contact">Contactanos</a>
+            <a class="nav-link js-scroll-trigger" href="#contact">Contacto</a>
           </li>
         </ul>
       </div>
@@ -82,16 +82,16 @@
             <img class="d-block w-100" src="templates-files/index/holidayinInterior.jpg" alt="Third slide">
           </div>
           <div class="carousel-item">
-            <img class="d-block w-100" src="templates-files/index/holidayinRestaurante.jpg" alt="Third slide">
+            <img class="d-block w-100" src="templates-files/index/holidayinRestaurante.jpg" alt="4 slide">
           </div>
           <div class="carousel-item">
-            <img class="d-block w-100" src="templates-files/index/holidayinFuera.jpg" alt="Third slide">
+            <img class="d-block w-100" src="templates-files/index/holidayinFuera.jpg" alt="5 slide">
           </div>
           <div class="carousel-item">
-            <img class="d-block w-100" src="templates-files/index/in>/holidayinPieza.jpg" alt="Third slide">
+            <img class="d-block w-100" src="templates-files/index/holidayinPieza.jpg" alt="6 slide">
           </div>
           <div class="carousel-item">
-            <img class="d-block w-100" src="templates-files/index/holidayinRestaurante2.jpg" alt="Third slide">
+            <img class="d-block w-100" src="templates-files/index/holidayinRestaurante2.jpg" alt="7 slide">
           </div>
         </div>
       </div>
@@ -109,9 +109,9 @@
   <section id="download" class="download-section content-section text-center">
     <div class="container">
       <div class="col-lg-8 mx-auto">
-        <h2>Download Grayscale</h2>
-        <p>You can download Grayscale for free on the preview page at Start Bootstrap.</p>
-        <a href="http://startbootstrap.com/template-overviews/grayscale/" class="btn btn-default btn-lg">Visit Download Page</a>
+        <h2>Check-In</h2>
+        <p>Introduce tus datos, elije el tipo de habitacion, la cantidad de personas y los dias de estadia</p>
+        <input type="button" class="btn btn-default btn-lg" value="Ingresar al hotel" onclick="location='DatosCliente.html'">
       </div>
     </div>
   </section>
@@ -121,26 +121,24 @@
     <div class="container">
       <div class="row">
         <div class="col-lg-8 mx-auto">
-          <h2>Contact Start Bootstrap</h2>
-          <p>Feel free to leave us a comment on the
-            <a href="http://startbootstrap.com/template-overviews/grayscale/">Grayscale template overview page</a> on Start Bootstrap to give some feedback about this theme!</p>
+          <h2>Contactanos</h2>
           <ul class="list-inline banner-social-buttons">
             <li class="list-inline-item">
-              <a href="https://twitter.com/SBootstrap" class="btn btn-default btn-lg">
+              <a class="btn btn-default btn-lg">
+                <span class="network-name">+54 0351 477-9100</span>
+              </a>
+            </li>
+            <p class="rrss">Nuestras redes sociales</p>
+            <li class="list-inline-item">
+              <a href="https://twitter.com/holidayinn" class="btn btn-default btn-lg">
                   <i class="fa fa-twitter fa-fw"></i>
                   <span class="network-name">Twitter</span>
                 </a>
             </li>
             <li class="list-inline-item">
-              <a href="https://github.com/BlackrockDigital/startbootstrap" class="btn btn-default btn-lg">
-                  <i class="fa fa-github fa-fw"></i>
-                  <span class="network-name">Github</span>
-                </a>
-            </li>
-            <li class="list-inline-item">
-              <a href="https://plus.google.com/+Startbootstrap/posts" class="btn btn-default btn-lg">
-                  <i class="fa fa-google-plus fa-fw"></i>
-                  <span class="network-name">Google+</span>
+              <a href="https://es-la.facebook.com/HolidayInn/" class="btn btn-default btn-lg">
+                  <i class="fa fa-facebook fa-fw"></i>
+                  <span class="network-name">Facebook</span>
                 </a>
             </li>
           </ul>
