--- a/templates/Checkin.html
+++ b/templates/Checkin.html
@@ -1,15 +1,13 @@
-<!DOCTYPE html>
-
 <html lang="en">
 
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Holiday </title>
+  <title>Check-in</title>
   <!--
-Holiday Template
-http://www.templatemo.com/tm-475-holiday
+  Holiday Template
+  http://www.templatemo.com/tm-475-holiday
 -->
   <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,300,400italic,600,700' rel='stylesheet' type='text/css'>
   <link href="../src/css/font-awesome/css/font-awesome.css" rel="stylesheet">
@@ -17,12 +15,14 @@ http://www.templatemo.com/tm-475-holiday
   <link href="../src/css/checkin.css" rel="stylesheet">
 
 
+
+
   <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
   <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
   <!--[if lt IE 9]>
-    <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
-    <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-    <![endif]-->
+<script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
+<script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+<![endif]-->
 
 </head>
 
@@ -30,50 +30,49 @@ http://www.templatemo.com/tm-475-holiday
   <div class="container">
     <!-- Nav tabs -->
     <div class="subTitulo">
-      <label for="exampleTitleDatosUsuario">Datos Cliente</label>
+      <label for="exampleTitleDatosUsuario">Check-In</label>
     </div>
     <!-- Tab panes -->
     <div class="tab-content">
       <form action="#" method="post" class="hotel-search-form">
         <div class="tm-form-inner">
           <div class="form-group">
-            <select class="form-control">
-                          <option value="">-- Select Hotel -- </option>
-                          <option value="shangrila">Shangri-La</option>
-                    <option value="chatrium">Chatrium</option>
-                    <option value="fourseasons">Four Seasons</option>
-                    <option value="hilton">Hilton</option>
-                  </select>
+            <select id="selectHabit" class="form-control">
+              <option value="">-- Tipo de Habitacion -- </option>
+              <option value="1">Habitacion Doble</option>
+              <option value="2">Habitacion Grande</option>
+              <option value="3">Habitacion individual</option>
+            </select>
           </div>
           <div class="form-group">
             <div class='input-group date' id='datetimepicker1'>
-              <input type='text' class="form-control" placeholder="Check-in Date" />
+              <input id="date1" type='text' class="form-control" placeholder="Fecha de Check-in " />
               <span class="input-group-addon">
-                                  <span class="fa fa-calendar"></span>
+                <span class="fa fa-calendar"></span>
               </span>
             </div>
           </div>
           <div class="form-group">
             <div class='input-group date' id='datetimepicker2'>
-              <input type='text' class="form-control" placeholder="Check-out Date" />
+              <input id="date2" type='text' class="form-control" placeholder="Fecha de Check-out" />
               <span class="input-group-addon">
-                                  <span class="fa fa-calendar"></span>
+                <span class="fa fa-calendar"></span>
               </span>
             </div>
           </div>
           <div class="form-group margin-bottom-0">
-            <select class="form-control">
-                          <option value="">-- Guests -- </option>
-                          <option value="1">1</option>
-                    <option value="2">2</option>
-                    <option value="3">3</option>
-                    <option value="4">4</option>
-                    <option value="5p">5+</option>
-                  </select>
+            <select class="form-control" id = "huespedes">
+              <option value="">-- Huespedes -- </option>
+              <option value="1">1</option>
+              <option value="2">2</option>
+              <option value="3">3</option>
+              <option value="4">4</option>
+              <option value="5p">5+</option>
+            </select>
           </div>
         </div>
         <div class="form-group tm-yellow-gradient-bg text-center">
-          <button type="submit" name="submit" class="tm-yellow-btn">Check Now</button>
+          <button type="button" name="submit" onclick="guardarDb()" class="tm-yellow-btn">Check Now</button>
         </div>
       </form>
 
@@ -82,57 +81,30 @@ http://www.templatemo.com/tm-475-holiday
 
   </div>
   <script type="text/javascript" src="../src/js/jquery.min.js"></script>
-
-
-  <!-- jQuery -->
   <script type="text/javascript" src="../src/js/moment.js"></script>
-  <!-- moment.js -->
-
-  <!-- bootstrap js -->
   <script type="text/javascript" src="../src/js/bootstrap-datetimepicker.min.js"></script>
-  <!-- bootstrap date time picker js, http://eonasdan.github.io/bootstrap-datetimepicker/ -->
+  <script type="text/javascript" src="../src/js/functions.js"></script>
 
-  <!--
-	<script src="js/froogaloop.js"></script>
-	<script src="js/jquery.fitvid.js"></script>
--->
 
   <!-- Templatemo Script -->
+<script src="https://www.gstatic.com/firebasejs/4.2.0/firebase.js"></script>
   <script>
-    // HTML document is loaded. DOM is ready.
-    $(function() {
-
-      $('#hotelCarTabs a').click(function(e) {
-        e.preventDefault()
-        $(this).tab('show')
-      })
-
-      $('.date').datetimepicker({
-        format: 'MM/DD/YYYY'
-      });
-      $('.date-time').datetimepicker();
-
-      // https://css-tricks.com/snippets/jquery/smooth-scrolling/
-      $('a[href*=#]:not([href=#])').click(function() {
-        if (location.pathname.replace(/^\//, '') == this.pathname.replace(/^\//, '') && location.hostname == this.hostname) {
-          var target = $(this.hash);
-          target = target.length ? target : $('[name=' + this.hash.slice(1) + ']');
-          if (target.length) {
-            $('html,body').animate({
-              scrollTop: target.offset().top
-            }, 1000);
-            return false;
-          }
-        }
-      });
-    });
-
-    // Load Flexslider when everything is loaded.
-    $(window).load(function() {
-
-
-    });
+  // Initialize Firebase
+var config = {
+apiKey: "AIzaSyBq3HnZ5zc5wFufVHwbdTTe0HfjnrGf2GE",
+authDomain: "sistema-hotelero-ea09e.firebaseapp.com",
+databaseURL: "https://sistema-hotelero-ea09e.firebaseio.com",
+projectId: "sistema-hotelero-ea09e",
+storageBucket: "sistema-hotelero-ea09e.appspot.com",
+messagingSenderId: "1096395765230"
+};
+firebase.initializeApp(config);
   </script>
+
+  <script src="../src/js/db.js"></script>
+
+
+
 </body>
 
 </html>
