--- a/templates/Checkin.html
+++ b/templates/Checkin.html
@@ -1,4 +1,3 @@
-<html lang="en">
 
 <head>
   <meta charset="utf-8">
@@ -72,7 +71,7 @@
           </div>
         </div>
         <div class="form-group tm-yellow-gradient-bg text-center">
-          <button type="button" name="submit" onclick="guardarDb()" class="tm-yellow-btn">Check Now</button>
+          <button type="button" name="submit" onclick="guardarDb(); getdb(); verificador()" class="tm-yellow-btn">Check Now</button>
         </div>
       </form>
 
