--- a/templates/Checkin.html
+++ b/templates/Checkin.html
@@ -40,7 +40,7 @@
               <option value="">-- Tipo de Habitacion -- </option>
               <option value="1">Habitacion Doble</option>
               <option value="2">Habitacion Grande</option>
-              <option value="3">Habitacion individual</option>
+              <option value="3">Habitacion Individual</option>
             </select>
           </div>
           <div class="form-group">
@@ -71,7 +71,7 @@
           </div>
         </div>
         <div class="form-group tm-yellow-gradient-bg text-center">
-          <button type="button" name="submit" onclick="guardarDb(); getdb(); verificador()" class="tm-yellow-btn">Check Now</button>
+          <button type="button" name="submit" onclick="guardarDb();" class="tm-yellow-btn">Check Now</button>
         </div>
       </form>
 
