--- a/templates/Checkin.html
+++ b/templates/Checkin.html
@@ -1,4 +1,3 @@
-
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -26,41 +25,78 @@
 </head>
 
 <body>
-  <div class="container">
-    <!-- Nav tabs -->
-    <div class="subTitulo">
-      <label for="exampleTitleDatosUsuario">Check-In</label>
+
+  <div class="row">
+    <div class="col-4">
+      <center>
+        <h3 class="h3modi">Cantidad:</h3>
+        <table>
+          <tr>
+            <td>
+              Habitacion Doble: 10
+            </td>
+            <td>
+              <div id="HabitDoble"></div>
+            </td>
+          </tr>
+          <tr>
+            <td>
+              Habitacdion Grande: 40
+            </td>
+            <td>
+              <div id="HabitGrande">
+              </div>
+            </td>
+          </tr>
+          <tr>
+            <td>habitacion Individuales: 5</td>
+            <td>
+              <div id="HabitIndi"></div>
+            </td>
+          </tr>
+        </table>
+      </center>
     </div>
-    <!-- Tab panes -->
-    <div class="tab-content">
-      <form action="#" method="post" class="hotel-search-form">
-        <div class="tm-form-inner">
-          <div class="form-group">
-            <select id="selectHabit" class="form-control">
+    <!-- Nav tabs -->
+    <div class="container card col-4">
+      <div class="subTitulo">
+        <label for="exampleTitleDatosUsuario">Check-In</label>
+      </div>
+
+      <!-- Tab panes -->
+      <div class="tab-content">
+        <form action="#" method="post" class="hotel-search-form">
+          <div class="tm-form-inner">
+            <div class="form-group">
+              <label for="inputName" class="control-label">Tipo de Habitacion*</label>
+              <select id="selectHabit" class="form-control">
               <option value="">-- Tipo de Habitacion -- </option>
               <option value="1">Habitacion Doble</option>
               <option value="2">Habitacion Grande</option>
               <option value="3">Habitacion Individual</option>
             </select>
-          </div>
-          <div class="form-group">
-            <div class='input-group date' id='datetimepicker1'>
-              <input id="date1" type='text' class="form-control" placeholder="Fecha de Check-in " />
-              <span class="input-group-addon">
-                <span class="fa fa-calendar"></span>
-              </span>
             </div>
-          </div>
-          <div class="form-group">
-            <div class='input-group date' id='datetimepicker2'>
-              <input id="date2" type='text' class="form-control" placeholder="Fecha de Check-out" />
-              <span class="input-group-addon">
+            <div class="form-group">
+              <label for="inputName" class="control-label">Fecha de Ingreso*</label>
+              <div class='input-group date' id='datetimepicker1'>
+                <input id="date1" type='text' class="form-control" placeholder="Fecha de Check-in " />
+                <span class="input-group-addon">
                 <span class="fa fa-calendar"></span>
-              </span>
+                </span>
+              </div>
             </div>
-          </div>
-          <div class="form-group margin-bottom-0">
-            <select class="form-control" id = "huespedes">
+            <div class="form-group">
+              <label for="inputName" class="control-label">Fecha de Salida*</label>
+              <div class='input-group date' id='datetimepicker2'>
+                <input id="date2" type='text' class="form-control" placeholder="Fecha de Check-out" />
+                <span class="input-group-addon">
+                <span class="fa fa-calendar"></span>
+                </span>
+              </div>
+            </div>
+            <div class="form-group margin-bottom-0">
+              <label for="inputName" class="control-label">Cantidad de persoans*</label>
+              <select class="form-control" id="huespedes">
               <option value="">-- Huespedes -- </option>
               <option value="1">1</option>
               <option value="2">2</option>
@@ -68,17 +104,21 @@
               <option value="4">4</option>
               <option value="5p">5+</option>
             </select>
+            </div>
           </div>
-        </div>
-        <div class="form-group tm-yellow-gradient-bg text-center">
-          <button type="button" name="submit" onclick="guardarDb();" class="tm-yellow-btn">Check Now</button>
-        </div>
-      </form>
+          <div class="form-group tm-yellow-gradient-bg text-center">
+            <button type="button" name="submit" onclick="guardarDb();" class="tm-yellow-btn ">Check Now</button>
+          </div>
+        </form>
 
+
+      </div>
 
     </div>
 
+    <div class="col-4"></div>
   </div>
+
   <script type="text/javascript" src="../src/js/jquery.min.js"></script>
   <script type="text/javascript" src="../src/js/moment.js"></script>
   <script type="text/javascript" src="../src/js/bootstrap-datetimepicker.min.js"></script>
@@ -86,18 +126,18 @@
 
 
   <!-- Templatemo Script -->
-<script src="https://www.gstatic.com/firebasejs/4.2.0/firebase.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/4.2.0/firebase.js"></script>
   <script>
-  // Initialize Firebase
-var config = {
-apiKey: "AIzaSyBq3HnZ5zc5wFufVHwbdTTe0HfjnrGf2GE",
-authDomain: "sistema-hotelero-ea09e.firebaseapp.com",
-databaseURL: "https://sistema-hotelero-ea09e.firebaseio.com",
-projectId: "sistema-hotelero-ea09e",
-storageBucket: "sistema-hotelero-ea09e.appspot.com",
-messagingSenderId: "1096395765230"
-};
-firebase.initializeApp(config);
+    // Initialize Firebase
+    var config = {
+      apiKey: "AIzaSyBq3HnZ5zc5wFufVHwbdTTe0HfjnrGf2GE",
+      authDomain: "sistema-hotelero-ea09e.firebaseapp.com",
+      databaseURL: "https://sistema-hotelero-ea09e.firebaseio.com",
+      projectId: "sistema-hotelero-ea09e",
+      storageBucket: "sistema-hotelero-ea09e.appspot.com",
+      messagingSenderId: "1096395765230"
+    };
+    firebase.initializeApp(config);
   </script>
 
   <script src="../src/js/db.js"></script>
