--- a/templates/Checkin.html
+++ b/templates/Checkin.html
@@ -8,7 +8,7 @@
   http://www.templatemo.com/tm-475-holiday
 -->
   <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,300,400italic,600,700' rel='stylesheet' type='text/css'>
-  <link href="../src/css/font-awesome/css/font-awesome.css" rel="stylesheet">
+  <link href="../src/css/font-awesome/css/font-awesome.css" rel="stylesheet" type="text/css">
   <link href="../src/css/bootstrap.min.css" rel="stylesheet">
   <link href="../src/css/checkin.css" rel="stylesheet">
 
@@ -33,7 +33,7 @@
         <table>
           <tr>
             <td>
-              Habitacion Doble: 10
+              Habitacion Doble: 10. 700$ p/noche
             </td>
             <td>
               <div id="HabitDoble"></div>
@@ -41,7 +41,7 @@
           </tr>
           <tr>
             <td>
-              Habitacdion Grande: 40
+              Habitacdion Grande: 40. 1000$ p/noche
             </td>
             <td>
               <div id="HabitGrande">
@@ -49,7 +49,7 @@
             </td>
           </tr>
           <tr>
-            <td>habitacion Individuales: 5</td>
+            <td>habitacion Individuales: 5. 400$ p/noche</td>
             <td>
               <div id="HabitIndi"></div>
             </td>
@@ -70,7 +70,7 @@
             <div class="form-group">
               <label for="inputName" class="control-label">Tipo de Habitacion*</label>
               <select id="selectHabit" class="form-control">
-              <option value="">-- Tipo de Habitacion -- </option>
+
               <option value="1">Habitacion Doble</option>
               <option value="2">Habitacion Grande</option>
               <option value="3">Habitacion Individual</option>
@@ -95,19 +95,32 @@
               </div>
             </div>
             <div class="form-group margin-bottom-0">
-              <label for="inputName" class="control-label">Cantidad de persoans*</label>
+              <label for="inputName" class="control-label">Cantidad de personas*</label>
               <select class="form-control" id="huespedes">
-              <option value="">-- Huespedes -- </option>
+
               <option value="1">1</option>
               <option value="2">2</option>
               <option value="3">3</option>
               <option value="4">4</option>
-              <option value="5p">5+</option>
             </select>
             </div>
+            <div>
+              <button type="button" class="btn btn-info btncustom" onclick="precio()">Precio?</button>
+            </div>
+            <table>
+              <tr>
+                <td class="td1" id="td1">Total:</td>
+                <td class="td1">
+                  <div id="precio"></div>
+                </td>
+              </tr>
+            </table>
+
+
           </div>
+
           <div class="form-group tm-yellow-gradient-bg text-center">
-            <button type="button" name="submit" onclick="guardarDb();" class="tm-yellow-btn ">Check Now</button>
+            <button type="button" name="submit" onclick="guardarDb()" class="tm-yellow-btn ">Check Now</button>
           </div>
         </form>
 
