--- a/src/css/checkin.css
+++ b/src/css/checkin.css
@@ -1672,3 +1672,10 @@ tr{
   font-size: 20px;
   font-style: oblique;
 }
+.parallax {
+  background-image: url("../../templates//img/holidayinPileta5.jpg");
+  background-attachment: fixed;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
